--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "0.0.1",
   "main": "dist/index.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js",
+    "start": "yarn run build && node dist/bot.js"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.77",
@@ -12,8 +13,23 @@
     "mocha": "^4.0.1",
     "moment": "^2.18.1",
     "ts-loader": "^2.3.7",
+    "tslint": "^5.7.0",
     "typescript": "^2.5.3",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
+  },
+  "dependencies": {
+    "bluebird": "^3.5.1",
+    "body-parser": "^1.18.2",
+    "chalk": "^2.1.0",
+    "cheerio": "^1.0.0-rc.2",
+    "discordie": "^0.11.0",
+    "express": "^4.16.1",
+    "redis": "^2.8.0",
+    "request": "^2.83.0",
+    "stylus": "^0.54.5",
+    "super-error": "^2.1.1",
+    "url-unshort": "^5.0.0",
+    "youtube-node": "^1.3.2"
   }
 }
