--- a/package.json
+++ b/package.json
@@ -1,35 +1,57 @@
 {
   "name": "discord-music-bot",
-  "description": "A simple music bot for Discord",
   "version": "0.0.1",
+  "description": "A simple music bot for Discord",
+  "homepage": "",
+  "files": ["lib"],
   "main": "dist/index.js",
-  "scripts": {
-    "build": "webpack --config webpack.config.js",
-    "start": "yarn run build && node dist/bot.js"
-  },
+  "keywords": [""],
   "devDependencies": {
-    "@types/lodash": "^4.14.77",
-    "chai": "^4.1.2",
-    "mocha": "^4.0.1",
-    "moment": "^2.18.1",
-    "ts-loader": "^2.3.7",
-    "tslint": "^5.7.0",
-    "typescript": "^2.5.3",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1"
+    "clapp": "^1.3.0",
+    "discord.js": "^11.2.1",
+    "eslint": "^4.1.0",
+    "eslint-config-prettier": "^2.4.0",
+    "eslint-config-xo": "^0.18.2",
+    "eslint-plugin-prettier": "^2.2.0",
+    "husky": "^0.14.3",
+    "jest": "^21.0.0",
+    "jest-cli": "^21.0.0",
+    "lint-staged": "^4.2.1",
+    "nsp": "^2.6.3",
+    "prettier": "^1.7.0"
   },
-  "dependencies": {
-    "bluebird": "^3.5.1",
-    "body-parser": "^1.18.2",
-    "chalk": "^2.1.0",
-    "cheerio": "^1.0.0-rc.2",
-    "discordie": "^0.11.0",
-    "express": "^4.16.1",
-    "redis": "^2.8.0",
-    "request": "^2.83.0",
-    "stylus": "^0.54.5",
-    "super-error": "^2.1.1",
-    "url-unshort": "^5.0.0",
-    "youtube-node": "^1.3.2"
-  }
+  "scripts": {
+    "bot": "node ./lib/index.js",
+    "prepublish": "nsp check",
+    "pretest": "eslint .",
+    "precommit": "lint-staged",
+    "test": "jest"
+  },
+  "dependencies": {},
+  "lint-staged": {
+    "*.js": ["eslint --fix", "git add"],
+    "*.json": ["prettier --write", "git add"]
+  },
+  "eslintConfig": {
+    "extends": ["xo", "prettier"],
+    "env": {
+      "jest": true,
+      "node": true
+    },
+    "rules": {
+      "prettier/prettier": [
+        "error",
+        {
+          "singleQuote": true,
+          "printWidth": 90
+        }
+      ]
+    },
+    "plugins": ["prettier"]
+  },
+  "repository": "https://github.com/tannerz28/discord-music-bot.git",
+  "jest": {
+    "testEnvironment": "node"
+  },
+  "license": "GPL-3.0"
 }
