--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "jest-cli": "^21.0.0",
     "lint-staged": "^4.2.1",
     "nsp": "^2.6.3",
-    "prettier": "^1.7.0"
+    "prettier": "^1.7.0",
+    "node-opus": "^0.2.4",
+    "request": "^2.79.0",
+    "ytdl-core": "^0.7.21"
   },
   "scripts": {
     "start": "node ./lib/index.js",
     "prepublish": "nsp check",
     "pretest": "eslint .",
-    "precommit": "lint-staged",
     "test": "jest"
   },
   "dependencies": {},
