--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.0.1",
   "description": "A simple music bot for Discord",
   "homepage": "",
-  "files": ["lib"],
+  "files": [
+    "lib"
+  ],
   "main": "dist/index.js",
-  "keywords": [""],
+  "keywords": [
+    ""
+  ],
   "devDependencies": {
     "clapp": "^1.3.0",
     "discord.js": "^11.2.1",
@@ -17,11 +21,11 @@
     "jest": "^21.0.0",
     "jest-cli": "^21.0.0",
     "lint-staged": "^4.2.1",
+    "node-opus": "^0.2.4",
     "nsp": "^2.6.3",
     "prettier": "^1.7.0",
-    "node-opus": "^0.2.4",
     "request": "^2.79.0",
-    "ytdl-core": "^0.7.21"
+    "ytdl-core": "^0.7.24"
   },
   "scripts": {
     "start": "node ./lib/index.js",
@@ -29,13 +33,24 @@
     "pretest": "eslint .",
     "test": "jest"
   },
-  "dependencies": {},
+  "dependencies": {
+    "node-gyp": "^3.6.2"
+  },
   "lint-staged": {
-    "*.js": ["eslint --fix", "git add"],
-    "*.json": ["prettier --write", "git add"]
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ],
+    "*.json": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "eslintConfig": {
-    "extends": ["xo", "prettier"],
+    "extends": [
+      "xo",
+      "prettier"
+    ],
     "env": {
       "jest": true,
       "node": true
@@ -49,7 +64,9 @@
         }
       ]
     },
-    "plugins": ["prettier"]
+    "plugins": [
+      "prettier"
+    ]
   },
   "repository": "https://github.com/tannerz28/discord-music-bot.git",
   "jest": {
