search by keywords

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "node-gyp": "^3.6.2",
+    "valid-url": "^1.0.9",
     "youtube-search": "^1.0.10"
   },
   "lint-staged": {
