--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vibe-discord-music-bot",
+  "name": "vibe.js",
   "version": "1.4.0",
   "description": "A simple music bot for Discord",
   "homepage": "",
@@ -8,7 +8,11 @@
   ],
   "main": "dist/index.js",
   "keywords": [
-    ""
+    "discord",
+    "music",
+    "bot",
+    "vibe",
+    "vibe.js"
   ],
   "devDependencies": {
     "clapp": "^1.3.0",
@@ -67,7 +71,7 @@
       "prettier"
     ]
   },
-  "repository": "https://github.com/tannerz28/vibe-discord-music-bot.git",
+  "repository": "https://github.com/tannerz28/vibe.js.git",
   "jest": {
     "testEnvironment": "node"
   },
