--- a/.gitignore
+++ b/.gitignore
@@ -473,6 +473,9 @@ Session.vim
 # auto-generated tag files
 tags
 
+### Vagrant ###
+.vagrant/
+
 # End of https://www.gitignore.io/api/node,webstorm,sublimetext,visualstudio,visualstudiocode
 
 config.js
