--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
     "jest-cli": "^21.0.0",
     "node-opus": "^0.2.4",
     "nsp": "^2.6.3",
+    "pm2": "^2.7.1",
     "prettier": "^1.7.0",
     "request": "^2.83.0",
     "standard": "^10.0.3",
     "ytdl-core": "^0.7.24"
   },
   "scripts": {
-    "start": "node ./lib/index.js",
+    "start": "pm2 start ./lib/index.js",
     "prepush": "standard --fix",
     "standard": "standard --fix"
   },
