--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "devDependencies": {
     "clapp": "^1.3.0",
     "discord.js": "^11.2.1",
+    "esdoc": "^1.0.3",
+    "esdoc-standard-plugin": "^1.0.0",
     "husky": "^0.14.3",
     "jest": "^21.0.0",
     "jest-cli": "^21.0.0",
