--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "ytdl-core": "^0.7.24"
   },
   "scripts": {
-    "start": "sudo pm2 start ./lib/index.js",
+    "start": "sudo pm2 start ./index.js",
     "prepush": "standard --fix",
     "standard": "standard --fix"
   },
